dropdown text don't shown correctly
half of text invisible

--- a/src/css/bootstrap-rtl.css
+++ b/src/css/bootstrap-rtl.css
@@ -3222,7 +3222,7 @@ output {
     display: block;
     width: 100%;
     height: 34px;
-    padding: 6px 12px;
+    padding: 0px 5px;
     font-size: 14px;
     line-height: 1.42857143;
     color: #555;
